--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Dear XiaoDongGua to #{title}
+  p      We have went through a few of Valenties'day together. Clear in my memory, seems happen in yesterday. Time elapse, like a killing pig knife we are gonna to get older, nevertheless, there is some place for you in my heart.
+  p      I love you  "Gua".
+  p  Happen Valenties'day
+
