--- a/views/index.jade
+++ b/views/index.jade
@@ -12,9 +12,10 @@ block content
 
        p#nickname-err Nickname already in use
 
-     #messages.chat-message
+     #messages
       #nicknames
-      #lines
+      #lines.chat-message
+      #flag
      form.send-message#send-message
       input#message
       button send
