--- a/views/index.jade
+++ b/views/index.jade
@@ -1,23 +1,101 @@
 extends layout
 
+
+block append head
+  script(src='/socket.io/socket.io.js')
+  script
+
+        var socket = io.connect();
+        socket.on('connect', function(){
+              console.log('nicknames 111');
+        });
+
+        socket.on('announcement',function(msg){
+
+            $('#line').append($('<p>').append($('<em>')).text(msg));
+        });
+
+        socket.on('nickname', function(nicknames) {
+
+                  $('#nicknames').empty().append($('<span>On line:<span>'));
+
+                  for(var i in nicknames){
+                       $('#nicknames').append($('<b>').text(nicknames[i]+'  '));
+                  }
+        });
+        socket.on('user message', message);
+
+        socket.on('reconnect',function(){
+             $('#line').remove();
+             message('System update','reconnect server');
+        });
+        socket.on('reconnecting', function () {
+             message('System', 'Attempting to re-connect to the server');
+        });
+
+        socket.on('error', function (e) {
+             message('System', e ? e : 'A unknown error occurred');
+        });
+
+        function message(from, msg){
+
+
+             $('#lines').append($('<p>').append('<b>'+from+' : </b>'+msg));
+
+             var p = $('#lines p:last').position();
+
+             var size =  $('#lines p').size();
+
+
+             $('#lines').get(0).scrollTop = size*200;
+
+        }
+
+        $(function(){
+
+             $('#set-nickname').submit(function(ev){
+
+                  socket.emit('nickname',$('#nick').val());
+                  return false;
+
+             });
+
+             $('#send-message').submit(function(){
+                 //message('me', $('#message').val());
+
+                 socket.emit('user message', $('#message').val());
+
+
+                 clear();
+
+                 return false;
+             });
+
+             function clear(){
+                 $('#message').val('').focus();
+             };
+
+        });
 block content
-  h1= title
-  p Welcome to #{title}
+
   body
-   #chat
-     #nickname
-      form.wrap#set-nickname
-       p please input your nickname and press enter:
-       input#nick
+    div.container
+        h1= title
+        p Welcome to #{title}
+        #chat
+         #nickname
+          form.wrap#set-nickname
+           p please input your nickname and press enter:
+           input#nick
 
-       p#nickname-err Nickname already in use
+           p#nickname-err Nickname already in use
 
-     #messages
-      #nicknames
-      #lines.chat-message
-      #flag
-     form.send-message#send-message
-      input#message
-      button send
+         #messages
+          #nicknames
+          #lines.chat-message
+          #flag
+         form.send-message#send-message
+          input#message
+          button send
 
 
