--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,15 +5,19 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
+    link(rel='stylesheet', href='/stylesheets/doc.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
     <![endif]-->
     script(src='/javascripts/jquery/jquery-1.8.0.min.js')
-    
-    block content
-    include include/head
+
+
+    include includes/head
+    div.container.margin-top20
+     block content
+     include includes/footer
     script(src='/javascripts/bootstrap-transition.js')
     script(src='/javascripts/bootstrap-alert.js')
     script(src='/javascripts/bootstrap-modal.js')
