--- a/views/index.jade
+++ b/views/index.jade
@@ -89,7 +89,7 @@ block content
            input#nick
          #messages
           #nicknames
-          #lines.chat-message
+          #lines.chat-message.padding20
           #flag
          form.send-message#send-message
           input#message
