--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -1,4 +1,4 @@
-/home/soar/source/nodejsApp/twitter-bootstrap-320b75d/docs/assets/ico/*!
+/*!
  * Bootstrap v2.1.0
  *
  * Copyright 2012 Twitter, Inc
