--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,18 @@
 doctype 5
-html
+html(lang='en')
   head
    block head
     title= title
+    meta(charset='utf-8')
+    meta(content='width=device-width, initial-scale=1.0', name='viewport')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
-    link(rel='stylesheet', href='/stylesheets/doc.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    link(href='/ico/apple-touch-icon-144-precomposed.png', sizes='144x144', rel='apple-touch-icon-precomposed')
+    link(href='/ico/apple-touch-icon-114-precomposed.png', sizes='114x114', rel='apple-touch-icon-precomposed')
+    link(href='/ico/apple-touch-icon-72-precomposed.png', sizes='72x72', rel='apple-touch-icon-precomposed')
+    link(href='/ico/apple-touch-icon-57-precomposed.png', rel='apple-touch-icon-precomposed')
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
@@ -15,7 +21,7 @@ html
 
 
     include includes/head
-    div.container.margin-top20
+    div.container
      block content
      include includes/footer
     script(src='/javascripts/bootstrap-transition.js')
