--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -14,6 +14,8 @@ div.navbar.navbar-inverse.navbar-fixed-top
               a(href='#about') About
             li
               a(href='#contact') Contact
+            li
+              a(href='/reg') Register
             li.dropdown
               a(class='dropdown-toggle', href='#', data-toggle='dropdown') Dropdown
                 b.caret
