--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,8 @@ html(lang='en')
 
 
     include includes/head
+    include includes/message
+
     div.container
      block content
      include includes/footer
