--- a/views/post.jade
+++ b/views/post.jade
@@ -9,7 +9,7 @@ block content
       form(class='well form-inline center',action='/post',method='post')
         div.control-group
           div.controls
-          textarea(class='span4', name='post')
+          textarea(class='span4', name='content')
         div.control-group
           div.controls
           button(type='submit', class='btn btn-success') 发言
