--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,9 @@ body {
     padding-top: 60px;
     padding-bottom: 40px;
 }
-
+.min-height{
+    min-height: 500px;
+}
 
 
 .display-show{
@@ -19,8 +21,13 @@ body {
 }
 
 .chat-message{
-    background: #eee;
+    background: #EAEAEA;
 
+    background-color: #E9F1F4;
+    border-color: #E9F1F4 #D8DEE2 #D8DEE2;
+    border-radius: 0 0 5px 5px;
+    border-style: solid;
+    border-width: 1px 1px 2px;
     min-height: 400px;
     max-height: 400px;
     overflow-y: scroll;
