change orm to mongoose

--- a/views/user-blogs.jade
+++ b/views/user-blogs.jade
@@ -12,6 +12,6 @@ block content
             if i % 3 == 0
               div.row
             div.span3
-              h3 #{post.user} say:
-              small #{post.time}
-              p #{post.post}
+              h3 #{post.username} say:
+              small #{post.pustime}
+              p #{post.content}
