--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -32,11 +32,10 @@ div.navbar.navbar-inverse.navbar-fixed-top
                     b.caret
                   ul.dropdown-menu
                     li
-                      a(href='#') Micro Blog
+                      a(href='#') 我的资料
                     li
-                      a(href='#') Photos
-                    li
-                      a(href='/chat') Chat
+                      a(href='/u/#{user.name}') 我的微波
+
                     li.divider
                     li.nav-header Nav header
                     li
