add moment date format

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,3 +40,5 @@ html(lang='en')
     script(src='/javascripts/bootstrap-carousel.js')
     script(src='/javascripts/bootstrap-typeahead.js')
 
+    script(src='/javascripts/utils.js')
+
