--- a/views/index.jade
+++ b/views/index.jade
@@ -2,13 +2,17 @@ extends layout
 
 block append head
 
+  script
+
+
+
 block content
   body
     div.row-fluid
 
        div.span4
-         h2 blogs
+         h3 Top five topics
          if typeof(posts) !== 'undefined' && posts !== null && posts.length > 0
            each post, i in posts
-              p(class='auto-line') #{post.pusTime} #{post.username} say: #{post.content}
+              p(class='auto-line') #{post.fromNow} #{post.username} say: #{post.content}
 
