--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,3 +1,5 @@
+include display-nav
+
 div.navbar.navbar-inverse.navbar-fixed-top
   div.navbar-inner
     div.container
@@ -8,7 +10,8 @@ div.navbar.navbar-inverse.navbar-fixed-top
       a.brand(href='/') 翱翔中国
       div.nav-collapse.collapse
           ul.nav
-            li.active
+
+            mixin nav-active
               a(href='/') 主页
             li
               a(href='/post') 微薄
