--- a/views/reg.jade
+++ b/views/reg.jade
@@ -6,7 +6,7 @@ block content
   body
 
     div.container
-      form(action='/reg',method='post', class='form-horizontal')
+      form(action='/user',method='post', class='form-horizontal')
         fieldset
             legend 注册
             div.control-group
