--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -35,7 +35,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                     b.caret
                   ul.dropdown-menu
                     li
-                      a(href='#') 我的资料
+                      a(href='/user') 我的资料
                     li
                       a(href='/u/#{user.name}') 我的微波
 
