--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -2,12 +2,56 @@ extends ../layout
 
 
 block append head
+    link(rel='stylesheet', href='/stylesheets/fileuploader.css')
+    script(src='/javascripts/file-uploader/fileuploader.js')
+    script
+        $(function(){
+            function createUploader(){
+                var uploader = new qq.FileUploader({
+                    element: document.getElementById('file-uploader-demo1'),
+                    action: '/upload-face',
+                    debug: true,
+                    extraDropzones: [qq.getByClass(document, 'qq-upload-extra-drop-area')[0]],
+                    onComplete: function(id, fileName, response){
+                        alert('id: '+id+ '   fileName: '+fileName);
+                        if (!response.success){
+                            ok(false, 'server did not receive file')
+                            return;
+                        }
+                        var faceUrl = '/images/face/'+fileName;
+                        $('#image-face').attr('src',faceUrl);
+                        //delete response.success;
+                        //delete response.qqfile;
+
+                        //same(response, data, 'server received file and data');
+                    }
+                });
+            }
+
+            // in your app create uploader as soon as the DOM is ready
+            // don't wait for the window to load
+            window.onload = createUploader;
+        });
+
 
 
 block content
   body
     div(class='container well')
 
+        div(class='row-fluid')
+            div(id='file-uploader-demo1')
+                 noscript
+                    p Please enable JavaScript to use file uploader
+
+
+            div(class='qq-upload-extra-drop-area') Drop files here too
+
+
+        div(class='row-fluid')
+           img(id='image-face')
+
+           img(id='121',width="270",height="129",src='http://localhost:3000/images/face/e08.gif')
 
         div(class='row-fluid')
            form(action='/user',method='post',enctype='multipart/form-data',  class='form-horizontal')
